--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 @import "tailwindcss";
 @import "tw-animate-css";
-
-@custom-variant dark (&:is(.dark *));
-
-* {
-  padding: 0;
-  margin: 0;
-}
 
 body {
   width: 100dvw;
   min-height: 100dvh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  font-family: "Poppins", sans-serif;
 }
 
 @theme inline {
@@ -52,6 +45,20 @@ body {
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+
+  /* color */
+  --color-brown-31e: #26231e;
+  --color-brown-03b: #43403b;
+  --color-brown-16b: #75716b;
+  --color-brown-6d1: #dad6d1;
+  --color-brown-eeb: #efeeeb;
+  --color-brown-8f6: #f9f8f6;
+  --color-orange: #f2b68c;
+  --color-green: #12b279;
+  --color-sky: #d7f2e9;
+  --color-red: #eb5164;
+  --color-black-text: #1a1a2c;
+  /* color */
 }
 
 :root {
@@ -87,6 +94,8 @@ body {
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+  --shadow-bottom: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
 }
 
 .dark {
@@ -121,4 +130,67 @@ body {
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.556 0 0);
+}
+
+/* container */
+
+.container {
+  @apply w-full max-w-[1200px];
+}
+
+.nav-bar-container {
+  @apply w-full flex justify-center md:px-6 md:py-3 px-8 py-4;
+  box-shadow: var(--shadow-bottom);
+}
+
+.nav-and-footer-container {
+  @apply w-full;
+}
+
+/* button theme */
+.btn-border-16b {
+  @apply border z-50 text-brown-16b text-brown-31e rounded-full text-base px-10 py-3 bg-transparent hover:bg-brown-03b hover:text-white;
+}
+
+.btn-31e {
+  @apply border border-brown-31e bg-brown-31e text-white rounded-full text-base px-10 py-3 hover:bg-brown-03b;
+}
+
+/* flex center */
+.flex-center {
+  @apply flex justify-center;
+}
+
+/* font format */
+.text-h1 {
+  @apply text-[52px] font-semibold text-black-text;
+}
+
+.text-h2 {
+  @apply text-[40px] font-semibold text-black-text;
+}
+
+.text-h3 {
+  @apply text-2xl font-semibold text-black-text;
+}
+
+.text-h4 {
+  @apply text-xl font-semibold text-black-text;
+}
+
+.text-b1 {
+  @apply text-base font-medium text-black-text;
+}
+.text-b2 {
+  @apply text-[14px] font-medium text-black-text;
+}
+
+.text-b3 {
+  @apply text-[12px] font-medium text-black-text;
+}
+
+/* cal 3 card */
+
+.cal-3-card {
+  @apply flex-1 min-w-1/2 md:max-w-1/3 lg:min-w-0;
 }
