--- a/src/index.css
+++ b/src/index.css
@@ -207,5 +207,9 @@ body {
 /* cal 3 card */
 
 .cal-3-card {
-  @apply flex-1 min-w-1/2 md:max-w-1/3 lg:min-w-0;
+  @apply flex-1 min-w-72 md:max-w-1/3 md:min-w-0;
+}
+
+.tag {
+  @apply w-fit px-3 py-1 bg-green-2e9 rounded-full  text-green-279;
 }
